// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelection component accepts a url to the icon 1`] = `
<div>
  <div
    class="LanguageSelection-root-121"
  >
    <p>
      Introduction
    </p>
    <div>
      <h6
        class="MuiTypography-root LanguageSelection-heading-122 Typography-root-127 MuiTypography-h6"
        data-testid="typography"
      >
        Europe
      </h6>
      <div
        class="MuiGrid-root LanguageSelection-container-123 MuiGrid-container MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root LanguageSelection-item-124 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-161 MuiButton-text Button-text-162 Navigation-navigationListButton-158 LanguageSelection-link-125 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
            href="/al"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-164"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-165 MuiButton-iconSizeMedium"
              >
                <img
                  class="LanguageSelection-languageIcon-126"
                  height="16px"
                  src="path/to/al.svg"
                  width="20px"
                />
              </span>
              Albania
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root LanguageSelection-item-124 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-161 MuiButton-text Button-text-162 Navigation-navigationListButton-158 LanguageSelection-link-125 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
            href="/at"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-164"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-165 MuiButton-iconSizeMedium"
              >
                <img
                  class="LanguageSelection-languageIcon-126"
                  height="16px"
                  src="path/to/at.svg"
                  width="20px"
                />
              </span>
              Österreich
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component accepts introduction text 1`] = `
<div>
  <div
    class="LanguageSelection-root-61"
  >
    <p>
      Introduction
    </p>
    <div>
      <h6
        class="MuiTypography-root LanguageSelection-heading-62 Typography-root-67 MuiTypography-h6"
        data-testid="typography"
      >
        Europe
      </h6>
      <div
        class="MuiGrid-root LanguageSelection-container-63 MuiGrid-container MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root LanguageSelection-item-64 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-101 MuiButton-text Button-text-102 Navigation-navigationListButton-98 LanguageSelection-link-65 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
            href="/al"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-104"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-105 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageSelection-languageIcon-66"
                  height="16px"
                  width="20px"
                />
              </span>
              Albania
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root LanguageSelection-item-64 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-101 MuiButton-text Button-text-102 Navigation-navigationListButton-98 LanguageSelection-link-65 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
            href="/at"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-104"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-105 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageSelection-languageIcon-66"
                  height="16px"
                  width="20px"
                />
              </span>
              Österreich
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root LanguageSelection-item-64 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-101 MuiButton-text Button-text-102 Navigation-navigationListButton-98 LanguageSelection-link-65 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"France\\",\\"action\\":\\"/ch/fr-ch/\\"}"
            href="/ch/fr-ch"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-104"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-105 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageSelection-languageIcon-66"
                  height="16px"
                  width="20px"
                />
              </span>
              France
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component renders correctly 1`] = `
<div>
  <div
    class="LanguageSelection-root-1"
  >
    <div>
      <h6
        class="MuiTypography-root LanguageSelection-heading-2 Typography-root-7 MuiTypography-h6"
        data-testid="typography"
      >
        Europe
      </h6>
      <div
        class="MuiGrid-root LanguageSelection-container-3 MuiGrid-container MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root LanguageSelection-item-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-41 MuiButton-text Button-text-42 Navigation-navigationListButton-38 LanguageSelection-link-5 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
            href="/al"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-44"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-45 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageSelection-languageIcon-6"
                  height="16px"
                  width="20px"
                />
              </span>
              Albania
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root LanguageSelection-item-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-41 MuiButton-text Button-text-42 Navigation-navigationListButton-38 LanguageSelection-link-5 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
            href="/at"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-44"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-45 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageSelection-languageIcon-6"
                  height="16px"
                  width="20px"
                />
              </span>
              Österreich
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root LanguageSelection-item-4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-41 MuiButton-text Button-text-42 Navigation-navigationListButton-38 LanguageSelection-link-5 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"France\\",\\"action\\":\\"/ch/fr-ch/\\"}"
            href="/ch/fr-ch"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-44"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-45 MuiButton-iconSizeMedium"
              >
                <svg
                  class="LanguageSelection-languageIcon-6"
                  height="16px"
                  width="20px"
                />
              </span>
              France
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component renders correctly if forceMobile 1`] = `
<div>
  <div
    class="LanguageSelection-root-181"
  >
    <p>
      Introduction
    </p>
    <div>
      <h6
        class="MuiTypography-root LanguageSelection-heading-182 Typography-root-187 MuiTypography-h6"
        data-testid="typography"
      >
        Europe
      </h6>
      <div
        class="MuiGrid-root LanguageSelection-container-183 MuiGrid-container MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root LanguageSelection-item-184 MuiGrid-item MuiGrid-grid-xs-12"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-221 MuiButton-text Button-text-222 Navigation-navigationListButton-218 LanguageSelection-link-185 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Albania\\",\\"action\\":\\"/al/\\"}"
            href="/al"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-224"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-225 MuiButton-iconSizeMedium"
              >
                <img
                  class="LanguageSelection-languageIcon-186"
                  height="16px"
                  src="path/to/al.svg"
                  width="20px"
                />
              </span>
              Albania
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="MuiGrid-root LanguageSelection-item-184 MuiGrid-item MuiGrid-grid-xs-12"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-221 MuiButton-text Button-text-222 Navigation-navigationListButton-218 LanguageSelection-link-185 MuiButton-textPrimary"
            data-gtm="{\\"id\\":\\"nav-country-selector\\",\\"label\\":\\"Österreich\\",\\"action\\":\\"/at/\\"}"
            href="/at"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-224"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-225 MuiButton-iconSizeMedium"
              >
                <img
                  class="LanguageSelection-languageIcon-186"
                  height="16px"
                  src="path/to/at.svg"
                  width="20px"
                />
              </span>
              Österreich
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
